# sotext

./: .gitignore  ALGORITHMS.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: i18n.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: analysis.rs  commands.rs  export.rs  lib.rs  main.rs  sentence.rs  tfidf.rs
