[package]
name = "sotext"
version = "1.2.0"
description = "SoText — Text Similarity Detector"
authors = ["you"]
edition = "2021"

[lib]
name = "sotext_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
rust_xlsxwriter = "0.79"
dotext = "0.1"
scraper = "0.22"
rust-stemmers = "1.2"
strsim = "0.11"
whatlang = "0.16"
stop-words = "0.8"
lopdf = "0.34"
genpdf = "0.2"

